force-app/main/default/objects/FSM_DCFConfigurationWorkStep__mdt/fields/FSM_AlternativeFormsGroup__c.field-meta.xml
<CustomField>
    <fullName>FSM_AlternativeFormsGroup__c</fullName>
    <description>Any one of the forms under this group requires completion.</description>
    <inlineHelpText>Any one of the forms under this group requires completion.</inlineHelpText>
    <label>Alternative Form&apos;s Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sewerage</fullName>
                <default>true</default>
                <label>Sewerage</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>