force-app/main/default/objects/FSM_DCFConfigurationWorkStep__mdt/fields/FSM_DCFformName__c.field-meta.xml
<CustomField>
    <fullName>FSM_DCFformName__c</fullName>
    <description>This field stores API Names of the flows used for every Form. Created as a part of SFS-1298.</description>
    <label>DCF Form Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>