force-app/main/default/objects/FSM_DCFConfigurationWorkStep__mdt/fields/FSM_FormHasAlternative__c.field-meta.xml
<CustomField>
    <fullName>FSM_FormHasAlternative__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If ticked, this form has an alternate under the group specified. Any one of the forms in the group is required to be completed. Eg. Sewerage Incident Report or Sewerage Job Feedback.</description>
    <inlineHelpText>If ticked, this form has an alternate under the group specified.</inlineHelpText>
    <label>Has Alternative?</label>
    <type>Checkbox</type>
</CustomField>