force-app/main/default/objects/FSM_DCFConfigurationWorkStep__mdt/fields/FSM_IsMandatory__c.field-meta.xml
<CustomField>
    <fullName>FSM_IsMandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This Field is used for checking if the E-Form created is Mandatory to complete or not. Created as a part of SFS-1298.</description>
    <label>Mandatory On Complete</label>
    <type>Checkbox</type>
</CustomField>