force-app/main/default/objects/FSM_DCFConfigurationWorkStep__mdt/fields/FSM_MandatoryOnSuspend__c.field-meta.xml
<CustomField>
    <fullName>FSM_MandatoryOnSuspend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mandatory on Suspend</label>
    <type>Checkbox</type>
</CustomField>