force-app/main/default/objects/FSM_DCFConfigurationWorkStep__mdt/fields/FSM_MaxInstance__c.field-meta.xml
<CustomField>
    <fullName>FSM_MaxInstance__c</fullName>
    <description>SFS-6573. Maximum number of completed forms permitted Work Step. When DCF flow is launched it first checks for completed forms against this number.</description>
    <inlineHelpText>Maximum number of completed forms permitted under a Work Step.</inlineHelpText>
    <label>Max Instance</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>