force-app/main/default/objects/FSM_DCFConfigurationWorkStep__mdt/fields/FSM_NoEngonOP__c.field-meta.xml
<CustomField>
    <fullName>FSM_NoEngonOP__c</fullName>
    <description>Created as part of SFS-4894.This field is used for storing Config details of minimum crew size in work order for eform creation. If this number reaches the minimum crew size on the job, (along with Standard Text Key, Work Centre, Suitability, Business Unit etc) DCF becomes mandatory. Updated as part of SFS-6568.</description>
    <inlineHelpText>If this number reaches the min crew size on job, (along with other criteria below) DCF becomes mandatory.</inlineHelpText>
    <label>Minimum Number Of Engineers</label>
    <length>9</length>
    <type>Text</type>
</CustomField>