force-app/main/default/objects/FSM_DCFConfigurationWorkStep__mdt/fields/FSM_StTextKy__c.field-meta.xml
<CustomField>
    <fullName>FSM_StTextKy__c</fullName>
    <description>This Field is used for storing configuration details of Standard Text Key in Work Order for E-Forms Creation. Created as a part of SFS-1298.</description>
    <label>StTextKy</label>
    <length>80</length>
    <type>Text</type>
</CustomField>