force-app/main/default/objects/FSM_DCFConfigurationWorkStep__mdt/fields/FSM_Suitability__c.field-meta.xml
<CustomField>
    <fullName>FSM_Suitability__c</fullName>
    <description>This Field is used for storing configuration details of Suitability for E-Forms Creation. Created as a part of SFS-1298.</description>
    <label>Suitability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E</fullName>
                <default>true</default>
                <label>E</label>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>R</fullName>
            </value>
            <value>
                <fullName>*</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>