force-app/main/default/objects/FSM_DCFConfigurationWorkStep__mdt/fields/FSM_WorkStepName__c.field-meta.xml
<CustomField>
    <fullName>FSM_WorkStepName__c</fullName>
    <description>Created for SFS-4072.</description>
    <label>Work Step Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>