force-app/main/default/objects/FSM_DCFConfigurationWorkStep__mdt/fields/FSM_WorkStepTemplateId__c.field-meta.xml
<CustomField>
    <fullName>FSM_WorkStepTemplateId__c</fullName>
    <description>WorkStep Template ID uniquely identifies a workstep template. Created as part of SFS-6573</description>
    <label>WorkStep Template ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>